// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > --extra-templates 1`] = `
"/* eslint-disable */
/* tslint:disable */
/*
 * ---------------------------------------------------------------
 * ## THIS FILE WAS GENERATED VIA SWAGGER-TYPESCRIPT-API        ##
 * ##                                                           ##
 * ## AUTHOR: acacode                                           ##
 * ## SOURCE: https://github.com/acacode/swagger-typescript-api ##
 * ---------------------------------------------------------------
 */

/**
  Swagger Petstore
  1.0.0
  A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification
*/
export class Api {
  private request(params: Record<string, any>) {
    return fetch(params as any);
  }
}
"
`;

exports[`basic > --extra-templates-route 1`] = `
"/* eslint-disable */
/* tslint:disable */
/*
 * ---------------------------------------------------------------
 * ## THIS FILE WAS GENERATED VIA SWAGGER-TYPESCRIPT-API        ##
 * ##                                                           ##
 * ## AUTHOR: acacode                                           ##
 * ## SOURCE: https://github.com/acacode/swagger-typescript-api ##
 * ---------------------------------------------------------------
 */

/**
  Swagger Petstore
  1.0.0
  A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification
*/
export class WrongPathParams1 {
  private request(params: Record<string, any>) {
    return fetch(params as any);
  }
}
"
`;
